--- a/templates/login.html
+++ b/templates/login.html
@@ -85,6 +85,10 @@
           Sign in
         </button>
         <p class="mt-3">
+          Don't have an account?
+          <a href="{{ url_for('register') }}">Register now</a>
+        </p>
+        <p>
           <a href="{{ url_for('index') }}">Back to Home</a>
         </p>
         <p class="mt-5 mb-3 text-muted">Default login: admin / admin</p>
